# service-desk-copilot

./: .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  agent.md  docker-compose.yml  pyproject.toml  pytest.ini  requirements.txt
backend/: logging.ini
backend/app/: main.py
backend/app/adapters/: embeddings.py
backend/app/core/: config.py
backend/app/models/: dto.py  provider.py  provider_factory.py  provider_groq.py  provider_llamacpp.py  provider_ollama.py  provider_stub.py
backend/app/rag/: answer.py  planner.py  retrieve.py
backend/app/services/: chunking.py  entities.py  ingest_service.py  url_crawler.py
backend/app/store/: graph_repo.py  vector_chroma.py
backend/app/tests/: conftest.py  test_answer.py  test_ask_end_to_end_stub.py  test_chunking.py  test_dto.py  test_embeddings.py  test_entities.py  test_graph_repo.py  test_health_reachability.py  test_ingest_integration.py  test_ingest_pdf_guard.py  test_ingest_service.py  test_ingest_url.py  test_language_model.py  test_optional_slow.py  test_planner.py  test_provider.py  test_provider_paths.py  test_retrieval_integration_minimal.py  (+2 more)
docs/: RAG.md  README.md  mac-air-runbook.md
frontend/: .eslintrc.cjs  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.purge.test.tsx  App.tsx  featureFlags.ts  main.tsx  setupTests.ts  styles.css
scripts/: dev.sh  mac_air_check.py  start_slm.sh
scripts/neo4j/: 00_constraints.cypher
templates/: tier-a-mac-air.env  tier-b-hosted-hybrid.env  tier-c-budget-cloud.env
(+2 files in other folders)
