[build-system]
requires = ["setuptools>=65.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 100
target-version = ["py311"]
preview = true

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["backend"]

[tool.ruff.lint]
select = ["E", "F", "B", "I", "UP", "C4", "TID", "A", "S", "BLE", "RUF"]
ignore = ["S101"]
fixable = ["ALL"]

[tool.ruff.lint.per-file-ignores]
"backend/app/tests/*" = ["S101", "PLR2004", "A003"]

[tool.mypy]
python_version = "3.11"
warn_unused_configs = true
ignore_missing_imports = true
plugins = ["pydantic.mypy"]
disallow_untyped_defs = true
disallow_incomplete_defs = true
no_implicit_optional = true
check_untyped_defs = true

[[tool.mypy.overrides]]
module = "backend.app.tests.*"
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = false

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["backend/app/tests"]
